tests/ivg/invalid/negative_glyph_advance.ivg
format IVG-3
define font f [
metrics ascent:1 descent:-1 upm:1000
glyph a -1 []
]
